<resources>
    <string name="app_name">S01 Premiere Appplication</string>
    <string name="msgBonjour">Bonjour ma première application Android</string>
    <string name="msgMessage">Message</string>
    <string name="telephoner">Téléphoner</string>
    <string name="sms">Envoyer un SMS</string>
    <string name="jeu">Jeu</string>
    <string name="deviner_le_nombre">Bonjour %s, devinez le nombre</string>
    <string name="btnVerifier">Vérifier</string>
    <string name="msgWinner">Bravo</string>
    <string name="msgLess">Le nombre recherché est plus petit.</string>
    <string name="msgHigh">Le nombre recherché est plus grand.</string>
</resources>